<resources>
    <string name="app_name">Makesure Zihua</string>
    <string name="title_home">Home</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_about">About</string>
    <string name="app_about">Makesure Zihua. \\n Android Version.</string>
    <string name="zheng_ti">Zheng Ti</string>
    <string name="jian_ti">Jian Ti</string>
    <string name="fan_ti">Fan Ti</string>
    <string name="yi_ti">Yi Ti</string>
    <string name="input_zheng_ti">Input Zheng Ti Character</string>
    <string name="input_jian_ti">Input Jian Ti Character</string>
    <string name="input_fan_ti">Input Fan Ti Character</string>
    <string name="input_yi_ti">Input Yi Ti Character</string>
</resources>